--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "node --watch --no-warnings server.js"
+    "dev": "node --watch --no-warnings --env-file .env server.js"
   },
   "keywords": [],
   "author": "",
